2004-03-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* RegexBugs.cs: added new test with a regex used when discovering the
	wsdl document for a asmx page.

2004-03-22  Jackson Harper  <jackson@ximian.com>

	* RegexBugs.cs: Add test case for multiple matches.
	
2004-03-17  Francois Beauchemin <beauche@softhome.net>
 	* PerlTrials.cs : Added many test for RightToLeft
 	* PerlTest.cs, RegexTrial : Modified version of regextrial to 
 		be run all the test and to report exception.
  
2004-03-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* RegexBugs.cs: added test case for bug 54797.

2004-02-02  Nick Drochak <ndrochak@ieee.org>

	* RegexBugs.cs (RangeIgnoreCase): made the last assert pass on .NET.

2004-01-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* RegexBugs.cs: added test from bug #52924.

2004-01-07  Lluis Sanchez Gual <lluis@ximian.com>

	* RegexBugs.cs: Improved test. In Split(), if the last match is at the
	end of the string, an empty string must be added to the array of
	results.

2003-11-27  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* RegexBugs.cs: added tests from bug #42529.
