@@ -1,3 +1,7 @@
+2004-03-30  Lluis Sanchez Gual <lluis@ximian.com>
+
+	* RegexBugs.cs: Added test for bug #52890.
+	
 2004-03-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* RegexBugs.cs: added new test with a regex used when discovering the
